web/css/admin-parameters-registration.css
/* ... */
.logo-alignment-option-container{
    display: flex;
    justify-content: space-evenly;
    margin-top: 20px;
}

.logo-alignment-option{
    display: inline-flex;
    align-items: center;
}

.logo-alignment-option .text-label{
    margin-left: 10px !important;
}

.logo-alignment-option .styled-radio.bigger + label{
    margin-top: 0 !important;
}

.action-button-block .row{
    margin-bottom: 15px;
}

.action-button-option-input{
    border: 1px solid #636363;
    width: 400px;
    max-width: 80%;
    border-radius: 5px;
    padding: 5px 0 5px 10px;
    font-size: 14px;
    background-color: inherit;
}

.action-button-preview{
    /*width: fit-content;
    width: -moz-fit-content;*/
    border-radius: 25px;
    padding: 10px 20px 10px 20px;
    background-color: #ff0000;
    color: #ffffff;
    font-family: var(--police) !important;

    /*white-space: nowrap;
    max-width: 100%;
    text-overflow: ellipsis;
    overflow: hidden;

    min-height: 38px;*/
    display: inline-block;
    max-width: 250px;
    text-align: center;
    word-wrap: break-word;
}

.action-button-color-option{
    display: inline-flex;
    flex-direction: column;
}

.action-button-color-option span.option-title{
    margin-bottom: 15px;
}

.action-button-color-option:first-child{
    margin-right: 80px;
}

.add-other-content-container{
    background-color: #F9F9F9;
    display: flex;
    justify-content: space-evenly;
    padding: 20px 10px;
    margin-top: 30px;
}

.add-other-content-container .add{
    color: #245EDC;
    display: inline-flex;
    align-items: center;
}

.add-other-content-container .add::before{
    position: relative !important;
}

@media (max-width: 991px) {
    .add-other-content-container{
        flex-direction: column;
        padding-left: 20px;
        padding-top: 15px;
        padding-bottom: 15px;
    }

    .add-other-content-container .add{
        width: fit-content;
        width: -moz-fit-content;
    }
}


.template-name-container{
    padding-top: 40px;
}

.template-name-container.hidden{
    display: none;
}

.template-name-container .template-name-input{
    border: 1px solid #636363;
    width: 400px;
    max-width: 80%;
    border-radius: 5px;
    padding: 5px 0 5px 10px;
    font-size: 14px;
    background-color: inherit;
}

.template-name-container span.delete-input{
    float: none;
    top: 7px;
}

.template-name-container .template-name-label-container{
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

.template-name-container .template-name-input-row-container{
    width: 100%;
    max-width: 100%;
}

.app-dialog .submit-button-container .btn-valider.modify{
    margin-left: 40px;
}

.app-dialog .submit-button-container .btn-valider.validate{
    margin-right: 40px;
}

.app-dialog .btn-valider.hidden{
    display: none;
}

.options-container{
    margin-top: 40px;
    position: relative;
}

.options-wrapper{
    display: none;
}

.options-wrapper.active{
    display: block;
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: #ffffff;
    opacity: 0.5;
    z-index: 3;
}

@media (min-width: 992px){
    .modal-dialog.larger{
        max-width: 95%;
    }

    .left-col{
        border-right: 1px solid #e5e5e5;
    }
}

@media (max-width: 991px){
    .template-preview-block{
        width: 100%;
    }

    .logo-alignment-option-container{
        justify-content: flex-start;
        flex-direction: column;
    }

    .template-name-container .template-name-label-container{
        justify-content: flex-start;
    }

    #create-template-dialog .row{
        padding: 0 !important;
    }    
    .modal-step-3.second label {
        margin-top: .3em;
        margin-bottom: .5rem;
    }
}

@media (max-width: 575px){
    .footer-text-block .footer-text-option-container .footer-text-option-label{
        max-width: 80%;
    }

    .footer-text-block .footer-text-option-container .footer-text-option-input{
        max-width: 80%;
    }

    .app-dialog .submit-button-container{
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .app-dialog .submit-button-container .btn-valider.modify, #new-campaign-modal .modal-step-3 .btn-valider.modify {
        margin-right: 0;
        margin-left: 0;
        width: 120px;
    }

    .app-dialog .submit-button-container .btn-valider.validate, #new-campaign-modal .modal-step-3 .btn-valider.validate{
        margin-left: 0;
        margin-right: 0;
        width: 120px;
        margin-bottom: 40px;
    }
    #new-campaign-modal .modal-step-3 .btn-valider.validate {
        margin-top: 0;
    }
    .app-dialog .submit-button-container .btn-valider.save{
        width: 120px;
    }
}

@media (max-width: 320px){
    .template-name-container .template-name-input{
        max-width: 77%;
    }
}

/**
 * liste template
 */
.template-characteristic{
    display: flex;
    padding-left: 0;
}

.template-characteristic .template-img{
    width: 100%;
}

.template-characteristic .template-img-container{
    width: 80px;
    height: 100px;
    max-height: 100px;
    overflow: hidden;
    margin: 0 20px 0 0;
    display: flex;
    align-items: flex-start;
    border: 0.5px solid rgba(0,0,0,0.2);
}


.template-characteristic .template-name{
    font-family: var(--police_bold);
    color: var(--couleur_2);
    display: block;
}

.template-characteristic .template-edit-info{
    font-size: 12px;
    font-weight: bold;
    display: block;
}

.row.list.template-list .row{
    padding-bottom: 10px;
    padding-top: 25px;
}

.template-action-container{
    display: flex;
    justify-content: flex-end;
}

@media (max-width: 991px){
    .template-action-container{
        justify-content: center;
        padding-top: 25px;
    }
}

@media (max-width: 575px){
    .template-info{
        margin-left: 15px;
    }
}

/**
 * Prévisualisation template
 */
#preview-template-dialog img[src='']{
    display: initial;
}
/* ... */

